apps/selkies-desktop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selkies-desktop
  namespace: cloud-desktop
  annotations:
    cert-manager.io/cluster-issuer: ${default_cluster_issuer}
    external-dns.kubernetes.io/target: ${cloudflare_tunnel_hostname}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia-forwardauth-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: desktop${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selkies-desktop
                port:
                  name: http
  tls:
    - secretName: selkies-desktop-tls
      hosts:
        - desktop${public_host_suffix}.${delegating_domain}
